# chopper

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  requirements.txt  setup.py
backend-rs/backend-boilerplate/: Cargo.toml
backend-rs/backend-vulkan/: Cargo.toml
backend-rs/backend-vulkan/src/: device.rs  lib.rs  physical_device.rs
backend-rs/chopper-runtime/: Cargo.toml
backend-rs/chopper-runtime/src/: lib.rs
backend-rs/chopper-runtime/src/assembler/: assembler_base.rs  mod.rs  parse_instruction.rs  parse_literal.rs  parse_module.rs  parse_opcode.rs  parse_operand.rs  parse_type.rs
backend-rs/chopper-runtime/src/base/: constants.rs  errors.rs  mod.rs
backend-rs/chopper-runtime/src/buffer_view/: mod.rs
backend-rs/chopper-runtime/src/device_context/: mod.rs
backend-rs/chopper-runtime/src/functor/: mod.rs
backend-rs/chopper-runtime/src/instance/: mod.rs
backend-rs/chopper-runtime/src/instruction/: mod.rs
backend-rs/chopper-runtime/src/interpreter/: mod.rs
backend-rs/chopper-runtime/src/kernel/: kernel_registry.rs  mod.rs
backend-rs/chopper-runtime/src/kernel/glsl_src/: binary_arithmetic_f32.comp  binary_arithmetic_i32.comp  matrix_multiple_f32.comp
backend-rs/chopper-runtime/src/session/: mod.rs
backend-rs/chopper-runtime/src/vm/: mod.rs
backend-rs/demos/: Cargo.toml
backend-rs/demos/demo-standalone/: buffer_view.rs  device_context.rs  functor.rs  instance.rs  kernel.rs  kernel_add.comp  kernel_registry.rs  main.rs  opcode.rs  session.rs
backend-rs/hal/: Cargo.toml
backend-rs/utils/: Cargo.toml
backend-rs/utils/src/: lib.rs
chopper-compiler/chopper-compiler-module/: chopper-compiler-module.cpp
chopper-compiler/chopper-compiler-runmlir/: CMakeLists.txt  chopper-compiler-runmlir.cpp
chopper/numpy/: __init__.py
chopper/pass_manager/: __init__.py  arg_annotation_pass_manager.py  pass_manager_base.py  pass_registry.py  past_to_mlir_pass_manager.py  symbol_table.py
chopper/python/: __init__.py  python_jit_runner.py
chopper/pytorch/: __init__.py  compile_utils.py  torch_jit_compiler.py
cmake_modules/: AddChopper.cmake  ChopperPython.cmake  EnvFuncs.cmake
compiler/: CMakeLists.txt
compiler/include/: ChopperInit.h
compiler/lib/: CMakeLists.txt  ChopperInit.cpp
compiler/lib/Conversion/: CMakeLists.txt
compiler/lib/Conversion/AtirToCtir/: AtirToCtir.cpp  CMakeLists.txt
compiler/lib/Conversion/AtirToLinalg/: AtirToLinalg.cpp
compiler/lib/Conversion/AtirToMhlo/: AtirToMhlo.cpp  CMakeLists.txt
compiler/lib/Conversion/AtirToStd/: AtirToStd.cpp
compiler/lib/Conversion/AtirToTosa/: AtirToTosa.cpp  CMakeLists.txt
compiler/lib/Conversion/BasicpyToStd/: Passes.cpp  PrimitiveOpsConversion.cpp
compiler/lib/Conversion/NumpyToAtir/: Passes.cpp
compiler/lib/Dialect/: CMakeLists.txt
compiler/lib/Dialect/Atir/IR/: CMakeLists.txt
compiler/lib/Dialect/Atir/Transforms/: PassDetail.h
compiler/lib/Dialect/Basicpy/IR/: BasicpyDialect.cpp  CMakeLists.txt
compiler/lib/Dialect/Ctir/Transforms/: Bufferize.cpp
compiler/lib/Dialect/Mhlo/IR/: CMakeLists.txt  MhloDialect.cpp  MhloOps.cpp
compiler/lib/Dialect/Mhlo/Transforms/: CMakeLists.txt  MhloCustomPass.cpp  PassDetail.h  Passes.cpp
compiler/lib/Dialect/Numpy/IR/: CMakeLists.txt  NumpyOps.cpp
compiler/lib/Dialect/Numpy/Transforms/: ArrayToTensor.cpp  Passes.cpp  PublicFunctionToTensor.cpp  RefinePublicReturn.cpp
compiler/lib/Dialect/Refback/IR/: RefbackOps.cpp
compiler/lib/RefBackend/: LowerToLLVM.cpp
compiler/lib/RefBackend/Runtime/: CMakeLists.txt  unix_version.script
compiler/lib/Typing/Analysis/CPA/: CMakeLists.txt  Types.cpp
compiler/lib/Typing/Support/: CMakeLists.txt
compiler/lib/Typing/Transforms/: CMakeLists.txt
compiler/tools/: CMakeLists.txt
compiler/tools/chopper-compiler/: CMakeLists.txt  chopper-compiler.cpp
compiler/tools/chopper-compiler-module/: CMakeLists.txt  chopper-compiler-module.cpp
compiler/tools/chopper-compiler-runmlir/: CMakeLists.txt  chopper-compiler-runmlir.cpp
compiler/tools/chopper-opt/: CMakeLists.txt
compiler/tools/chopper-opt-capi/: CMakeLists.txt  chopper-opt-capi.cpp
compiler/tools/chopper-translate/: chopper-translate.cpp
docs/: README.md
docs/source/: chopper.numpy.rst  chopper.python.rst  chopper.rst  chopper.scaffold.mlir_dialects.rst  chopper.scaffold.rst  chopper.scaffold.utils.rst  chopper.torch.rst  modules.rst
experimental/: exp_example.py  identity_test.py
experimental/dialects/: transpose_test.mlir
experimental/end2end_pytorch/: mnist_training.py  mnist_training_crt.py  mnist_training_iree.py
experimental/pytorch/: torch_conv2d_test_forward.py
experimental/samples/: add_sample_terse.py  add_scalar_sample.py  exp_sample_explained.py  (+2 more)
frontend_examples/: test_binary.py  test_constant.py  test_python.py
frontend_tests/: basic.mlir  broadcast.mlir  constant-add-scalar.mlir  constant-add.mlir  constant.mlir  control-flow-basic.mlir  conv_2d_nchw.mlir  elementwise.mlir  invalid-broadcast.mlir  invalid-conv_2d_nchw.mlir  invalid-matmul.mlir  invalid-num-inputs.mlir  matmul.mlir  mixed-rank.mlir  multi-output.mlir  multiple-ops.mlir  pad.mlir  return_op_with_operand.mlir  return_op_without_operand.mlir  scalar.mlir  scalar_add_float.mlir  test_debug.py  test_mlir.py
my_scripts/: test.py  test_exp.py  test_normal.py
output/: add_mhlo.mlir  add_test  add_tosa.mlir  mhlo_preprocess_by_iree.mlir  mnist_training_iree_log  mul_test_output  random_normal_xla.mlir  random_uniform_mhlo.mlir  test.py  torch_conv2d_test_forward  torch_exp_test_output  use.dot
samples/: exp_scalar_sample.py
scripts/: _build_chopper.sh  build_all.sh  build_and_install.sh  install_all.sh  refactor_project_name.sh  test_all.sh
src/compiler/lib/RefBackend/: CMakeLists.txt  LowerToRefbackrtABI.cpp  RefBackend.cpp
src/compiler/lib/RefBackend/JITHelpers/: JITModule.cpp
src/compiler/lib/RefBackend/Runtime/: CompilerDataStructures.h
test/: lit.cfg.py
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tmp/: atir.6ae71d0ed986480fadc32fcaf62d6d30  atir.uniform  tosa.6ae71d0ed986480fadc32fcaf62d6d30
(+308 files in other folders)
