[package]
name = "backend-vulkan"
version = "0.9.0"
description = "Vulkan API backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-vulkan"
workspace = "../.."
edition = "2021"

[features]
default = []
use-rtld-next = ["libc"]

[lib]
name = "backend_vulkan"

[dependencies]
arrayvec = "0.5"
byteorder = "1"
log = "0.4"
libc = { version = "0.2", optional = true }
ash = "0.32"
hal = { path = "../hal", version = "0.9", package = "gfx-hal" }
# hal = { version = "0.9", package = "gfx-hal" }
parking_lot = "0.11"
smallvec = "1.0"
raw-window-handle = "0.3"
inplace_it = "0.3.3"
gfx-renderdoc = { package = "gfx-renderdoc", version = "0.1.0" }
# gfx-renderdoc = { path = "../../auxil/renderdoc", version = "0.1.0" }

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
tag = "gfx-26"
features = ["spv-out"]
optional = true

