[package]
name = "chopper-runtime"
version = "0.1.0"
edition = "2021"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chopper_runtime"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Albert Shi"]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
log = "0.4"
ash = "0.32"
env_logger = "0.8"
glsl-to-spirv = "0.1.4"
nom = "^4.0"
float_eq = "0.7.0"

hal = { path = "../hal", package = "gfx-hal", version = "0.9.0" }
# hal = { package = "gfx-hal", version = "0.9.0" }
auxil = { path = "../utils", package = "crt-utils", version = "0.1" }
backend-vulkan = { path = "../backend-vulkan", package = "backend-vulkan", version = "0.9.0" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
